add_library(bagel STATIC)

target_sources(
  bagel
  PRIVATE bagel.cpp
          metaengine.cpp
          music.cpp
          boflib/cache.cpp
          boflib/cursor_data.cpp
          boflib/error.cpp
          boflib/event_loop.cpp
          boflib/file_functions.cpp
          boflib/llist.cpp
          boflib/log.cpp
          boflib/misc.cpp
          boflib/palette.cpp
          boflib/queue.cpp
          boflib/sound.cpp
          boflib/string.cpp
          boflib/string_functions.cpp
          mfc/afx.cpp
          mfc/bitmap.cpp
          mfc/bitmap_button.cpp
          mfc/brush.cpp
          mfc/button.cpp
          mfc/cmd_target.cpp
          mfc/dialog.cpp
          mfc/dc.cpp
          mfc/doc_manager.cpp
          mfc/doc_template.cpp
          mfc/document.cpp
          mfc/edit.cpp
          mfc/file.cpp
          mfc/font.cpp
          mfc/frame_wnd.cpp
          mfc/gdi_object.cpp
          mfc/global_functions.cpp
          mfc/ifstream.cpp
          mfc/joystickapi.cpp
          mfc/listbox.cpp
          mfc/menu.cpp
          mfc/object.cpp
          mfc/paint_dc.cpp
          mfc/palette.cpp
          mfc/pen.cpp
          mfc/rgn.cpp
          mfc/scroll_view.cpp
          mfc/scrollbar.cpp
          mfc/single_doc_template.cpp
          mfc/static.cpp
          mfc/string.cpp
          mfc/view.cpp
          mfc/win_app.cpp
          mfc/win_thread.cpp
          mfc/wingdi.cpp
          mfc/wnd.cpp
          mfc/gfx/blitter.cpp
          mfc/gfx/surface.cpp
          mfc/gfx/cursor.cpp
          mfc/gfx/dialog_template.cpp
          mfc/gfx/fonts.cpp
          mfc/gfx/palette_map.cpp
          mfc/gfx/text_render.cpp
          mfc/libs/event_loop.cpp
          mfc/libs/events.cpp
          mfc/libs/resources.cpp
          mfc/libs/settings.cpp
          spacebar/baglib/area_object.cpp
          spacebar/baglib/bagel.cpp
          spacebar/baglib/base_pda.cpp
          spacebar/baglib/bmp_object.cpp
          spacebar/baglib/button_object.cpp
          spacebar/baglib/character_object.cpp
          spacebar/baglib/chat_wnd.cpp
          spacebar/baglib/command_object.cpp
          spacebar/baglib/cursor.cpp
          spacebar/baglib/dev_dlg.cpp
          spacebar/baglib/dossier_object.cpp
          spacebar/baglib/event_sdev.cpp
          spacebar/baglib/exam.cpp
          spacebar/baglib/expression.cpp
          spacebar/baglib/expression_object.cpp
          spacebar/baglib/fmovie.cpp
          spacebar/baglib/help.cpp
          spacebar/baglib/ifstream.cpp
          spacebar/baglib/inv.cpp
          spacebar/baglib/link_object.cpp
          spacebar/baglib/log_msg.cpp
          spacebar/baglib/master_win.cpp
          spacebar/baglib/menu_dlg.cpp
          spacebar/baglib/moo.cpp
          spacebar/baglib/movie_object.cpp
          spacebar/baglib/object.cpp
          spacebar/baglib/paint_table.cpp
          spacebar/baglib/pan_bitmap.cpp
          spacebar/baglib/pan_window.cpp
          spacebar/baglib/parse_object.cpp
          spacebar/baglib/pda.cpp
          spacebar/baglib/rp_object.cpp
          spacebar/baglib/save_game_file.cpp
          spacebar/baglib/sound_object.cpp
          spacebar/baglib/sprite_object.cpp
          spacebar/baglib/storage_dev_bmp.cpp
          spacebar/baglib/storage_dev_win.cpp
          spacebar/baglib/text_object.cpp
          spacebar/baglib/time_object.cpp
          spacebar/baglib/var.cpp
          spacebar/baglib/variable_object.cpp
          spacebar/baglib/wield.cpp
          spacebar/baglib/zoom_pda.cpp
          spacebar/boflib/app.cpp
          spacebar/boflib/crc.cpp
          spacebar/boflib/dat_file.cpp
          spacebar/boflib/debug.cpp
          spacebar/boflib/file.cpp
          spacebar/boflib/options.cpp
          spacebar/boflib/res.cpp
          spacebar/boflib/timer.cpp
          spacebar/boflib/vector.cpp
          spacebar/boflib/gfx/bitmap.cpp
          spacebar/boflib/gfx/cursor.cpp
          spacebar/boflib/gfx/sprite.cpp
          spacebar/boflib/gfx/text.cpp
          spacebar/boflib/gui/button.cpp
          spacebar/boflib/gui/dialog.cpp
          spacebar/boflib/gui/edit_text.cpp
          spacebar/boflib/gui/list_box.cpp
          spacebar/boflib/gui/movie.cpp
          spacebar/boflib/gui/scroll_bar.cpp
          spacebar/boflib/gui/text_box.cpp
          spacebar/boflib/gui/window.cpp
          spacebar/dialogs/credits_dialog.cpp
          spacebar/dialogs/next_cd_dialog.cpp
          spacebar/dialogs/opt_window.cpp
          spacebar/dialogs/quit_dialog.cpp
          spacebar/dialogs/restart_dialog.cpp
          spacebar/dialogs/restore_dialog.cpp
          spacebar/dialogs/save_dialog.cpp
          spacebar/dialogs/start_dialog.cpp
          spacebar/spacebar.cpp
          spacebar/bib_odds_wnd.cpp
          spacebar/bibble_window.cpp
          spacebar/computer.cpp
          spacebar/console.cpp
          spacebar/filter.cpp
          spacebar/full_wnd.cpp
          spacebar/main_link_object.cpp
          spacebar/main_window.cpp
          spacebar/master_win.cpp
          spacebar/nav_window.cpp
          spacebar/slot_wnd.cpp
          spacebar/sraf_computer.cpp
          spacebar/thud.cpp
          spacebar/vid_wnd.cpp
          hodjnpodj/hodjnpodj.cpp
          hodjnpodj/console.cpp
          hodjnpodj/gfx/bold_font.cpp
          hodjnpodj/gfx/palette.cpp
          hodjnpodj/hnplibs/audiocfg.cpp
          hodjnpodj/hnplibs/bitmaps.cpp
          hodjnpodj/hnplibs/button.cpp
          hodjnpodj/hnplibs/cbofdlg.cpp
          hodjnpodj/hnplibs/cmessbox.cpp
          hodjnpodj/hnplibs/dibapi.cpp
          hodjnpodj/hnplibs/dibdoc.cpp
          hodjnpodj/hnplibs/dibfile.cpp
          hodjnpodj/hnplibs/lzss.cpp
          hodjnpodj/hnplibs/mainmenu.cpp
          hodjnpodj/hnplibs/rules.cpp
          hodjnpodj/hnplibs/sprite.cpp
          hodjnpodj/hnplibs/text.cpp
          hodjnpodj/libs/vector.cpp
          hodjnpodj/metagame/bgen/backpack.cpp
          hodjnpodj/metagame/bgen/bbt.cpp
          hodjnpodj/metagame/bgen/bdbg.cpp
          hodjnpodj/metagame/bgen/bgb.cpp
          hodjnpodj/metagame/bgen/bgenut.cpp
          hodjnpodj/metagame/bgen/bsutl.cpp
          hodjnpodj/metagame/bgen/btimeut.cpp
          hodjnpodj/metagame/bgen/c1btndlg.cpp
          hodjnpodj/metagame/bgen/c2btndlg.cpp
          hodjnpodj/metagame/bgen/invent.cpp
          hodjnpodj/metagame/bgen/item.cpp
          hodjnpodj/metagame/bgen/mgstat.cpp
          hodjnpodj/metagame/bgen/note.cpp
          hodjnpodj/metagame/bgen/notebook.cpp
          hodjnpodj/metagame/demo/app.cpp
          hodjnpodj/metagame/demo/hodjpodj_demo.cpp
          hodjnpodj/metagame/frame/app.cpp
          hodjnpodj/metagame/frame/hodjpodj.cpp
          hodjnpodj/metagame/frame/maindlg.cpp
          hodjnpodj/metagame/frame/movytmpl.cpp
          hodjnpodj/metagame/frame/msudlg.cpp
          hodjnpodj/metagame/grand_tour/init.cpp
          hodjnpodj/metagame/grand_tour/dialogs.cpp
          hodjnpodj/metagame/grand_tour/grand_tour.cpp
          hodjnpodj/metagame/gtl/init.cpp
          hodjnpodj/metagame/gtl/citemdlg.cpp
          hodjnpodj/metagame/gtl/cmapdlg.cpp
          hodjnpodj/metagame/gtl/cturndlg.cpp
          hodjnpodj/metagame/gtl/encount.cpp
          hodjnpodj/metagame/gtl/gtl.cpp
          hodjnpodj/metagame/gtl/gtlcmp.cpp
          hodjnpodj/metagame/gtl/gtlcpl.cpp
          hodjnpodj/metagame/gtl/gtldoc.cpp
          hodjnpodj/metagame/gtl/gtlfrm.cpp
          hodjnpodj/metagame/gtl/gtllex.cpp
          hodjnpodj/metagame/gtl/gtlmanp.cpp
          hodjnpodj/metagame/gtl/gtlmgm.cpp
          hodjnpodj/metagame/gtl/gtlmve.cpp
          hodjnpodj/metagame/gtl/gtlui.cpp
          hodjnpodj/metagame/gtl/gtlview.cpp
          hodjnpodj/metagame/gtl/optdlg.cpp
          hodjnpodj/metagame/gtl/pawn.cpp
          hodjnpodj/metagame/gtl/rules.cpp
          hodjnpodj/metagame/gtl/spinner.cpp
          hodjnpodj/metagame/gtl/store.cpp
          hodjnpodj/metagame/saves/savegame.cpp
          hodjnpodj/metagame/saves/savegame_info.cpp
          hodjnpodj/metagame/saves/restdlg.cpp
          hodjnpodj/metagame/saves/savedlg.cpp
          hodjnpodj/metagame/zoom/init.cpp
          hodjnpodj/metagame/zoom/zoommap.cpp
          hodjnpodj/archeroids/init.cpp
          hodjnpodj/archeroids/main.cpp
          hodjnpodj/artparts/init.cpp
          hodjnpodj/artparts/artparts.cpp
          hodjnpodj/artparts/optndlg.cpp
          hodjnpodj/archeroids/usercfg.cpp
          hodjnpodj/barbershop/animate.cpp
          hodjnpodj/barbershop/init.cpp
          hodjnpodj/barbershop/barb.cpp
          hodjnpodj/barbershop/board.cpp
          hodjnpodj/barbershop/card.cpp
          hodjnpodj/barbershop/deck.cpp
          hodjnpodj/barbershop/jay.cpp
          hodjnpodj/barbershop/logic.cpp
          hodjnpodj/barbershop/main.cpp
          hodjnpodj/barbershop/paint.cpp
          hodjnpodj/barbershop/stack.cpp
          hodjnpodj/barbershop/stats.cpp
          hodjnpodj/barbershop/undo.cpp
          hodjnpodj/barbershop/usercfg.cpp
          hodjnpodj/battlefish/init.cpp
          hodjnpodj/battlefish/bfish.cpp
          hodjnpodj/battlefish/usercfg.cpp
          hodjnpodj/beacon/init.cpp
          hodjnpodj/beacon/beacon.cpp
          hodjnpodj/beacon/optndlg.cpp
          hodjnpodj/crypt/init.cpp
          hodjnpodj/crypt/crypt.cpp
          hodjnpodj/crypt/main.cpp
          hodjnpodj/crypt/optn.cpp
          hodjnpodj/crypt/pnt_gram.cpp
          hodjnpodj/crypt/rec.cpp
          hodjnpodj/crypt/stats.cpp
          hodjnpodj/dfa/init.cpp
          hodjnpodj/dfa/dfa.cpp
          hodjnpodj/dfa/msgdlg.cpp
          hodjnpodj/dfa/optdlg.cpp
          hodjnpodj/fuge/init.cpp
          hodjnpodj/fuge/fuge.cpp
          hodjnpodj/fuge/usercfg.cpp
          hodjnpodj/garfunkle/init.cpp
          hodjnpodj/garfunkle/garfunkle.cpp
          hodjnpodj/garfunkle/note.cpp
          hodjnpodj/garfunkle/optndlg.cpp
          hodjnpodj/life/init.cpp
          hodjnpodj/life/game.cpp
          hodjnpodj/life/grid.cpp
          hodjnpodj/life/life.cpp
          hodjnpodj/life/usercfg.cpp
          hodjnpodj/mankala/init.cpp
          hodjnpodj/mankala/bgenut.cpp
          hodjnpodj/mankala/btimeut.cpp
          hodjnpodj/mankala/mnk.cpp
          hodjnpodj/mankala/mnklog.cpp
          hodjnpodj/mankala/mnkopt.cpp
          hodjnpodj/mankala/mnkui.cpp
          hodjnpodj/mazedoom/init.cpp
          hodjnpodj/mazedoom/mod.cpp
          hodjnpodj/mazedoom/optndlg.cpp
          hodjnpodj/novacancy/init.cpp
          hodjnpodj/novacancy/main.cpp
          hodjnpodj/packrat/init.cpp
          hodjnpodj/packrat/msgdlg.cpp
          hodjnpodj/packrat/optdlg.cpp
          hodjnpodj/packrat/packrat.cpp
          hodjnpodj/pdq/init.cpp
          hodjnpodj/pdq/game.cpp
          hodjnpodj/pdq/guess.cpp
          hodjnpodj/pdq/main.cpp
          hodjnpodj/pdq/usercfg.cpp
          hodjnpodj/peggle/init.cpp
          hodjnpodj/peggle/game.cpp
          hodjnpodj/peggle/gameinit.cpp
          hodjnpodj/peggle/options.cpp
          hodjnpodj/peggle/optndlg.cpp
          hodjnpodj/peggle/optsub.cpp
          hodjnpodj/poker/init.cpp
          hodjnpodj/poker/amtdlg.cpp
          hodjnpodj/poker/c1btndlg.cpp
          hodjnpodj/poker/optdlg.cpp
          hodjnpodj/poker/poffsdlg.cpp
          hodjnpodj/poker/poker.cpp
          hodjnpodj/poker/uwondlg.cpp
          hodjnpodj/riddles/init.cpp
          hodjnpodj/riddles/riddles.cpp
          hodjnpodj/riddles/usercfg.cpp
          hodjnpodj/wordsearch/init.cpp
          hodjnpodj/wordsearch/c1btndlg.cpp
          hodjnpodj/wordsearch/clongdlg.cpp
          hodjnpodj/wordsearch/msgdlg.cpp
          hodjnpodj/wordsearch/optdlg.cpp
          hodjnpodj/wordsearch/wordlist.cpp
          hodjnpodj/wordsearch/wordsearch.cpp
  PRIVATE FILE_SET
          HEADERS
          FILES
          bagel.h
          metaengine.h
          music.h
          boflib/cache.h
          boflib/cursor_data.h
          boflib/error.h
          boflib/event_loop.h
          boflib/file_functions.h
          boflib/llist.h
          boflib/log.h
          boflib/misc.h
          boflib/palette.h
          boflib/queue.h
          boflib/sound.h
          boflib/string.h
          boflib/string_functions.h
          mfc/afx.h
          mfc/global_functions.h
          mfc/ifstream.h
          mfc/joystickapi.h
          mfc/wingdi.h
          mfc/gfx/blitter.h
          mfc/gfx/surface.h
          mfc/gfx/cursor.h
          mfc/gfx/dialog_template.h
          mfc/gfx/fonts.h
          mfc/gfx/palette_map.h
          mfc/gfx/text_render.h
          mfc/libs/event_loop.h
          mfc/libs/events.h
          mfc/libs/resources.h
          mfc/libs/settings.h
          spacebar/baglib/area_object.h
          spacebar/baglib/bagel.h
          spacebar/baglib/base_pda.h
          spacebar/baglib/bmp_object.h
          spacebar/baglib/button_object.h
          spacebar/baglib/character_object.h
          spacebar/baglib/chat_wnd.h
          spacebar/baglib/command_object.h
          spacebar/baglib/cursor.h
          spacebar/baglib/dev_dlg.h
          spacebar/baglib/dossier_object.h
          spacebar/baglib/event_sdev.h
          spacebar/baglib/exam.h
          spacebar/baglib/expression.h
          spacebar/baglib/expression_object.h
          spacebar/baglib/fmovie.h
          spacebar/baglib/help.h
          spacebar/baglib/ifstream.h
          spacebar/baglib/inv.h
          spacebar/baglib/link_object.h
          spacebar/baglib/log_msg.h
          spacebar/baglib/master_win.h
          spacebar/baglib/menu_dlg.h
          spacebar/baglib/moo.h
          spacebar/baglib/movie_object.h
          spacebar/baglib/object.h
          spacebar/baglib/paint_table.h
          spacebar/baglib/pan_bitmap.h
          spacebar/baglib/pan_window.h
          spacebar/baglib/parse_object.h
          spacebar/baglib/pda.h
          spacebar/baglib/rp_object.h
          spacebar/baglib/save_game_file.h
          spacebar/baglib/sound_object.h
          spacebar/baglib/sprite_object.h
          spacebar/baglib/storage_dev_bmp.h
          spacebar/baglib/storage_dev_win.h
          spacebar/baglib/text_object.h
          spacebar/baglib/time_object.h
          spacebar/baglib/var.h
          spacebar/baglib/variable_object.h
          spacebar/baglib/wield.h
          spacebar/baglib/zoom_pda.h
          spacebar/boflib/app.h
          spacebar/boflib/crc.h
          spacebar/boflib/dat_file.h
          spacebar/boflib/debug.h
          spacebar/boflib/file.h
          spacebar/boflib/options.h
          spacebar/boflib/res.h
          spacebar/boflib/timer.h
          spacebar/boflib/vector.h
          spacebar/boflib/gfx/bitmap.h
          spacebar/boflib/gfx/cursor.h
          spacebar/boflib/gfx/sprite.h
          spacebar/boflib/gfx/text.h
          spacebar/boflib/gui/button.h
          spacebar/boflib/gui/dialog.h
          spacebar/boflib/gui/edit_text.h
          spacebar/boflib/gui/list_box.h
          spacebar/boflib/gui/movie.h
          spacebar/boflib/gui/scroll_bar.h
          spacebar/boflib/gui/text_box.h
          spacebar/boflib/gui/window.h
          spacebar/dialogs/credits_dialog.h
          spacebar/dialogs/next_cd_dialog.h
          spacebar/dialogs/opt_window.h
          spacebar/dialogs/quit_dialog.h
          spacebar/dialogs/restart_dialog.h
          spacebar/dialogs/restore_dialog.h
          spacebar/dialogs/save_dialog.h
          spacebar/dialogs/start_dialog.h
          spacebar/spacebar.h
          spacebar/bib_odds_wnd.h
          spacebar/bibble_window.h
          spacebar/computer.h
          spacebar/console.h
          spacebar/filter.h
          spacebar/full_wnd.h
          spacebar/main_link_object.h
          spacebar/main_window.h
          spacebar/master_win.h
          spacebar/nav_window.h
          spacebar/slot_wnd.h
          spacebar/sraf_computer.h
          spacebar/thud.h
          spacebar/vid_wnd.h
          hodjnpodj/hodjnpodj.h
          hodjnpodj/console.h
          hodjnpodj/gfx/bold_font.h
          hodjnpodj/gfx/palette.h
          hodjnpodj/hnplibs/audiocfg.h
          hodjnpodj/hnplibs/bitmaps.h
          hodjnpodj/hnplibs/button.h
          hodjnpodj/hnplibs/cbofdlg.h
          hodjnpodj/hnplibs/cmessbox.h
          hodjnpodj/hnplibs/dibapi.h
          hodjnpodj/hnplibs/dibdoc.h
          hodjnpodj/hnplibs/lzss.h
          hodjnpodj/hnplibs/mainmenu.h
          hodjnpodj/hnplibs/rules.h
          hodjnpodj/hnplibs/sprite.h
          hodjnpodj/hnplibs/text.h
          hodjnpodj/libs/vector.h
          hodjnpodj/metagame/bgen/backpack.h
          hodjnpodj/metagame/bgen/bbt.h
          hodjnpodj/metagame/bgen/bdbg.h
          hodjnpodj/metagame/bgen/bgb.h
          hodjnpodj/metagame/bgen/bgenut.h
          hodjnpodj/metagame/bgen/bsutl.h
          hodjnpodj/metagame/bgen/btimeut.h
          hodjnpodj/metagame/bgen/c1btndlg.h
          hodjnpodj/metagame/bgen/c2btndlg.h
          hodjnpodj/metagame/bgen/invent.h
          hodjnpodj/metagame/bgen/item.h
          hodjnpodj/metagame/bgen/mgstat.h
          hodjnpodj/metagame/bgen/note.h
          hodjnpodj/metagame/bgen/notebook.h
          hodjnpodj/metagame/demo/app.h
          hodjnpodj/metagame/demo/hodjpodj_demo.h
          hodjnpodj/metagame/frame/app.h
          hodjnpodj/metagame/frame/hodjpodj.h
          hodjnpodj/metagame/frame/movytmpl.h
          hodjnpodj/metagame/grand_tour/init.h
          hodjnpodj/metagame/grand_tour/dialogs.h
          hodjnpodj/metagame/grand_tour/grand_tour.h
          hodjnpodj/metagame/gtl/init.h
          hodjnpodj/metagame/gtl/citemdlg.h
          hodjnpodj/metagame/gtl/cmapdlg.h
          hodjnpodj/metagame/gtl/cturndlg.h
          hodjnpodj/metagame/gtl/encount.h
          hodjnpodj/metagame/gtl/gtl.h
          hodjnpodj/metagame/gtl/gtldoc.h
          hodjnpodj/metagame/gtl/gtlfrm.h
          hodjnpodj/metagame/gtl/gtlview.h
          hodjnpodj/metagame/gtl/optdlg.h
          hodjnpodj/metagame/gtl/pawn.h
          hodjnpodj/metagame/gtl/rules.h
          hodjnpodj/metagame/gtl/spinner.h
          hodjnpodj/metagame/gtl/store.h
          hodjnpodj/metagame/saves/savegame.h
          hodjnpodj/metagame/saves/savegame_info.h
          hodjnpodj/metagame/saves/restdlg.h
          hodjnpodj/metagame/saves/savedlg.h
          hodjnpodj/metagame/zoom/init.h
          hodjnpodj/metagame/zoom/zoommap.h
          hodjnpodj/archeroids/init.h
          hodjnpodj/archeroids/main.h
          hodjnpodj/artparts/init.h
          hodjnpodj/artparts/artparts.h
          hodjnpodj/artparts/optndlg.h
          hodjnpodj/archeroids/usercfg.h
          hodjnpodj/barbershop/animate.h
          hodjnpodj/barbershop/init.h
          hodjnpodj/barbershop/barb.h
          hodjnpodj/barbershop/board.h
          hodjnpodj/barbershop/card.h
          hodjnpodj/barbershop/deck.h
          hodjnpodj/barbershop/logic.h
          hodjnpodj/barbershop/main.h
          hodjnpodj/barbershop/paint.h
          hodjnpodj/barbershop/stack.h
          hodjnpodj/barbershop/stats.h
          hodjnpodj/barbershop/undo.h
          hodjnpodj/barbershop/usercfg.h
          hodjnpodj/battlefish/init.h
          hodjnpodj/battlefish/bfish.h
          hodjnpodj/battlefish/usercfg.h
          hodjnpodj/beacon/init.h
          hodjnpodj/beacon/beacon.h
          hodjnpodj/beacon/optndlg.h
          hodjnpodj/crypt/init.h
          hodjnpodj/crypt/crypt.h
          hodjnpodj/crypt/main.h
          hodjnpodj/crypt/optn.h
          hodjnpodj/crypt/pnt_gram.h
          hodjnpodj/crypt/rec.h
          hodjnpodj/crypt/stats.h
          hodjnpodj/dfa/init.h
          hodjnpodj/dfa/dfa.h
          hodjnpodj/fuge/init.h
          hodjnpodj/fuge/fuge.h
          hodjnpodj/fuge/usercfg.h
          hodjnpodj/garfunkle/init.h
          hodjnpodj/garfunkle/garfunkle.h
          hodjnpodj/garfunkle/note.h
          hodjnpodj/garfunkle/optndlg.h
          hodjnpodj/life/init.h
          hodjnpodj/life/game.h
          hodjnpodj/life/grid.h
          hodjnpodj/life/life.h
          hodjnpodj/life/usercfg.h
          hodjnpodj/mankala/init.h
          hodjnpodj/mankala/bgenut.h
          hodjnpodj/mankala/btimeut.h
          hodjnpodj/mankala/mnk.h
          hodjnpodj/mankala/mnkopt.h
          hodjnpodj/mazedoom/init.h
          hodjnpodj/mazedoom/mod.h
          hodjnpodj/mazedoom/optndlg.h
          hodjnpodj/novacancy/init.h
          hodjnpodj/novacancy/main.h
          hodjnpodj/packrat/init.h
          hodjnpodj/packrat/packrat.h
          hodjnpodj/pdq/init.h
          hodjnpodj/pdq/game.h
          hodjnpodj/pdq/guess.h
          hodjnpodj/pdq/main.h
          hodjnpodj/pdq/usercfg.h
          hodjnpodj/peggle/init.h
          hodjnpodj/peggle/game.h
          hodjnpodj/peggle/gameinit.h
          hodjnpodj/peggle/options.h
          hodjnpodj/peggle/optndlg.h
          hodjnpodj/poker/init.h
          hodjnpodj/poker/c1btndlg.h
          hodjnpodj/poker/poker.h
          hodjnpodj/riddles/init.h
          hodjnpodj/riddles/riddles.h
          hodjnpodj/riddles/usercfg.h
          hodjnpodj/wordsearch/init.h
          hodjnpodj/wordsearch/c1btndlg.h
          hodjnpodj/wordsearch/clongdlg.h
          hodjnpodj/wordsearch/wordlist.h
          hodjnpodj/wordsearch/wordsearch.h
)

add_library(bagel_detection)

target_sources(bagel_detection PRIVATE detection.cpp)
