add_library(bladerunner STATIC)

target_sources(
  bladerunner
  PRIVATE actor.cpp
          actor_clues.cpp
          actor_combat.cpp
          actor_dialogue_queue.cpp
          actor_walk.cpp
          adpcm_decoder.cpp
          ambient_sounds.cpp
          archive.cpp
          aud_stream.cpp
          audio_cache.cpp
          audio_mixer.cpp
          audio_player.cpp
          audio_speech.cpp
          bladerunner.cpp
          boundingbox.cpp
          chapters.cpp
          color.cpp
          combat.cpp
          crimes_database.cpp
          debugger.cpp
          decompress_lcw.cpp
          decompress_lzo.cpp
          dialogue_menu.cpp
          framelimiter.cpp
          fog.cpp
          font.cpp
          game_flags.cpp
          game_info.cpp
          image.cpp
          item.cpp
          item_pickup.cpp
          items.cpp
          light.cpp
          lights.cpp
          matrix.cpp
          metaengine.cpp
          mouse.cpp
          movement_track.cpp
          music.cpp
          obstacles.cpp
          outtake.cpp
          overlays.cpp
          regions.cpp
          savefile.cpp
          scene.cpp
          scene_objects.cpp
          screen_effects.cpp
          script/script.cpp
          script/init_script.cpp
          script/kia_script.cpp
          script/vk_script.cpp
          script/esper_script.cpp
          script/police_maze.cpp
          script/ai_script.cpp
          script/ai/answering_machine.cpp
          script/ai/baker.cpp
          script/ai/blimp_guy.cpp
          script/ai/bryant.cpp
          script/ai/bullet_bob.cpp
          script/ai/chew.cpp
          script/ai/clovis.cpp
          script/ai/crazylegs.cpp
          script/ai/dektora.cpp
          script/ai/desk_clerk.cpp
          script/ai/dispatcher.cpp
          script/ai/early_q.cpp
          script/ai/early_q_bartender.cpp
          script/ai/fish_dealer.cpp
          script/ai/free_slot_a.cpp
          script/ai/free_slot_b.cpp
          script/ai/gaff.cpp
          script/ai/general_doll.cpp
          script/ai/generic_walker_a.cpp
          script/ai/generic_walker_b.cpp
          script/ai/generic_walker_c.cpp
          script/ai/gordo.cpp
          script/ai/governor_kolvig.cpp
          script/ai/grigorian.cpp
          script/ai/guzza.cpp
          script/ai/hanoi.cpp
          script/ai/hasan.cpp
          script/ai/hawkers_barkeep.cpp
          script/ai/hawkers_parrot.cpp
          script/ai/holloway.cpp
          script/ai/howie_lee.cpp
          script/ai/hysteria_patron1.cpp
          script/ai/hysteria_patron2.cpp
          script/ai/hysteria_patron3.cpp
          script/ai/insect_dealer.cpp
          script/ai/isabella.cpp
          script/ai/izo.cpp
          script/ai/klein.cpp
          script/ai/lance.cpp
          script/ai/leon.cpp
          script/ai/lockup_guard.cpp
          script/ai/lucy.cpp
          script/ai/luther.cpp
          script/ai/maggie.cpp
          script/ai/male_announcer.cpp
          script/ai/marcus.cpp
          script/ai/mccoy.cpp
          script/ai/mia.cpp
          script/ai/moraji.cpp
          script/ai/murray.cpp
          script/ai/mutant1.cpp
          script/ai/mutant2.cpp
          script/ai/mutant3.cpp
          script/ai/newscaster.cpp
          script/ai/officer_grayford.cpp
          script/ai/officer_leary.cpp
          script/ai/photographer.cpp
          script/ai/rachael.cpp
          script/ai/rajif.cpp
          script/ai/runciter.cpp
          script/ai/sadik.cpp
          script/ai/sebastian.cpp
          script/ai/sergeant_walls.cpp
          script/ai/shoeshine_man.cpp
          script/ai/steele.cpp
          script/ai/taffy.cpp
          script/ai/taffy_patron.cpp
          script/ai/teenager.cpp
          script/ai/the_bard.cpp
          script/ai/transient.cpp
          script/ai/tyrell.cpp
          script/ai/tyrell_guard.cpp
          script/ai/zuben.cpp
          script/scene_script.cpp
          script/scene/ar01.cpp
          script/scene/ar02.cpp
          script/scene/bb01.cpp
          script/scene/bb02.cpp
          script/scene/bb03.cpp
          script/scene/bb04.cpp
          script/scene/bb05.cpp
          script/scene/bb06.cpp
          script/scene/bb07.cpp
          script/scene/bb08.cpp
          script/scene/bb09.cpp
          script/scene/bb10.cpp
          script/scene/bb11.cpp
          script/scene/bb12.cpp
          script/scene/bb51.cpp
          script/scene/ct01.cpp
          script/scene/ct02.cpp
          script/scene/ct03.cpp
          script/scene/ct04.cpp
          script/scene/ct05.cpp
          script/scene/ct06.cpp
          script/scene/ct07.cpp
          script/scene/ct08.cpp
          script/scene/ct09.cpp
          script/scene/ct10.cpp
          script/scene/ct11.cpp
          script/scene/ct12.cpp
          script/scene/ct51.cpp
          script/scene/dr01.cpp
          script/scene/dr02.cpp
          script/scene/dr03.cpp
          script/scene/dr04.cpp
          script/scene/dr05.cpp
          script/scene/dr06.cpp
          script/scene/hc01.cpp
          script/scene/hc02.cpp
          script/scene/hc03.cpp
          script/scene/hc04.cpp
          script/scene/hf01.cpp
          script/scene/hf02.cpp
          script/scene/hf03.cpp
          script/scene/hf04.cpp
          script/scene/hf05.cpp
          script/scene/hf06.cpp
          script/scene/hf07.cpp
          script/scene/kp01.cpp
          script/scene/kp02.cpp
          script/scene/kp03.cpp
          script/scene/kp04.cpp
          script/scene/kp05.cpp
          script/scene/kp06.cpp
          script/scene/kp07.cpp
          script/scene/ma01.cpp
          script/scene/ma02.cpp
          script/scene/ma04.cpp
          script/scene/ma05.cpp
          script/scene/ma06.cpp
          script/scene/ma07.cpp
          script/scene/ma08.cpp
          script/scene/nr01.cpp
          script/scene/nr02.cpp
          script/scene/nr03.cpp
          script/scene/nr04.cpp
          script/scene/nr05.cpp
          script/scene/nr06.cpp
          script/scene/nr07.cpp
          script/scene/nr08.cpp
          script/scene/nr09.cpp
          script/scene/nr10.cpp
          script/scene/nr11.cpp
          script/scene/ps01.cpp
          script/scene/ps02.cpp
          script/scene/ps03.cpp
          script/scene/ps04.cpp
          script/scene/ps05.cpp
          script/scene/ps06.cpp
          script/scene/ps07.cpp
          script/scene/ps09.cpp
          script/scene/ps10.cpp
          script/scene/ps11.cpp
          script/scene/ps12.cpp
          script/scene/ps13.cpp
          script/scene/ps14.cpp
          script/scene/ps15.cpp
          script/scene/rc01.cpp
          script/scene/rc02.cpp
          script/scene/rc03.cpp
          script/scene/rc04.cpp
          script/scene/rc51.cpp
          script/scene/tb02.cpp
          script/scene/tb03.cpp
          script/scene/tb05.cpp
          script/scene/tb06.cpp
          script/scene/tb07.cpp
          script/scene/ug01.cpp
          script/scene/ug02.cpp
          script/scene/ug03.cpp
          script/scene/ug04.cpp
          script/scene/ug05.cpp
          script/scene/ug06.cpp
          script/scene/ug07.cpp
          script/scene/ug08.cpp
          script/scene/ug09.cpp
          script/scene/ug10.cpp
          script/scene/ug12.cpp
          script/scene/ug13.cpp
          script/scene/ug14.cpp
          script/scene/ug15.cpp
          script/scene/ug16.cpp
          script/scene/ug17.cpp
          script/scene/ug18.cpp
          script/scene/ug19.cpp
          set.cpp
          settings.cpp
          set_effects.cpp
          shape.cpp
          slice_animations.cpp
          slice_renderer.cpp
          subtitles.cpp
          suspects_database.cpp
          text_resource.cpp
          time.cpp
          ui/elevator.cpp
          ui/end_credits.cpp
          ui/esper.cpp
          ui/kia.cpp
          ui/kia_log.cpp
          ui/kia_section_base.cpp
          ui/kia_section_clues.cpp
          ui/kia_section_crimes.cpp
          ui/kia_section_diagnostic.cpp
          ui/kia_section_help.cpp
          ui/kia_section_load.cpp
          ui/kia_section_pogo.cpp
          ui/kia_section_save.cpp
          ui/kia_section_settings.cpp
          ui/kia_section_suspects.cpp
          ui/scores.cpp
          ui/spinner.cpp
          ui/ui_check_box.cpp
          ui/ui_container.cpp
          ui/ui_image_picker.cpp
          ui/ui_input_box.cpp
          ui/ui_scroll_box.cpp
          ui/ui_slider.cpp
          ui/ui_dropdown.cpp
          ui/vk.cpp
          view.cpp
          vqa_decoder.cpp
          vqa_player.cpp
          waypoints.cpp
          zbuffer.cpp
  PRIVATE FILE_SET
          HEADERS
          FILES
          actor.h
          actor_clues.h
          actor_combat.h
          actor_dialogue_queue.h
          actor_walk.h
          adpcm_decoder.h
          ambient_sounds.h
          archive.h
          aud_stream.h
          audio_cache.h
          audio_mixer.h
          audio_player.h
          audio_speech.h
          bladerunner.h
          boundingbox.h
          chapters.h
          color.h
          combat.h
          crimes_database.h
          debugger.h
          decompress_lcw.h
          decompress_lzo.h
          dialogue_menu.h
          framelimiter.h
          fog.h
          font.h
          game_flags.h
          game_info.h
          image.h
          item.h
          item_pickup.h
          items.h
          light.h
          lights.h
          matrix.h
          mouse.h
          movement_track.h
          music.h
          obstacles.h
          outtake.h
          overlays.h
          regions.h
          savefile.h
          scene.h
          scene_objects.h
          screen_effects.h
          script/script.h
          script/init_script.h
          script/kia_script.h
          script/vk_script.h
          script/esper_script.h
          script/police_maze.h
          script/ai_script.h
          script/scene_script.h
          set.h
          settings.h
          set_effects.h
          shape.h
          slice_animations.h
          slice_renderer.h
          subtitles.h
          suspects_database.h
          text_resource.h
          time.h
          ui/elevator.h
          ui/end_credits.h
          ui/esper.h
          ui/kia.h
          ui/kia_log.h
          ui/kia_section_base.h
          ui/kia_section_clues.h
          ui/kia_section_crimes.h
          ui/kia_section_diagnostic.h
          ui/kia_section_help.h
          ui/kia_section_load.h
          ui/kia_section_pogo.h
          ui/kia_section_save.h
          ui/kia_section_settings.h
          ui/kia_section_suspects.h
          ui/scores.h
          ui/spinner.h
          ui/ui_check_box.h
          ui/ui_container.h
          ui/ui_image_picker.h
          ui/ui_input_box.h
          ui/ui_scroll_box.h
          ui/ui_slider.h
          ui/ui_dropdown.h
          ui/vk.h
          view.h
          vqa_decoder.h
          vqa_player.h
          waypoints.h
          zbuffer.h
)

add_library(bladerunner_detection)

target_sources(bladerunner_detection PRIVATE detection.cpp)
